[package]
name = "maestro"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
semver = "1.0"
zip = "0.6.6"
futures-util = "0.3.31"
colored = "2.2.0"
dirs = "5.0.1"
sha2 = "0.10.9"
hex = "0.4.3"
clap = { version = "4.5.53", features = ["derive"] }
indicatif = "0.18.3"